--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -242,14 +242,42 @@ textarea, button {
 /*QUIENES SOMOS*/
 
 .quienes_somos {
-	margin-top: 5vw;
+	margin-top: 4vw;
 }
 
 .quienes_somos_texto {
 	line-height: 1.8vw;
+	padding:9vw 5vw 0 6vw;
 }
 
 .quienes_somos_img {
+	padding:0;
+}
 
+.nuestros_objetivos_img {
+	padding: 0;
+}
+
+.nuestros_objetivos_texto {
+	line-height: 1.8vw;
+	padding: 16vw 4vw 0 4vw;
+}
+
+@media screen and (max-width: 767px){
+	.quienes_somos_texto, .nuestros_objetivos_texto {
+		line-height: 7vw;
+	}
+
+	.nuestros_objetivos_img {
+		display: none;
+	}
+
+	.nuestros_objetivos_texto {
+		padding-top: 2vw;
+	}
+
+	.quienes_somos_texto {
+		padding-bottom: 6vw;
+	}
 }
 
